--- a/src/GettingStartedApplication/ActorBackendService.Interfaces/ActorBackendService.Interfaces.csproj
+++ b/src/GettingStartedApplication/ActorBackendService.Interfaces/ActorBackendService.Interfaces.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ActorBackendService.Interfaces</RootNamespace>
     <AssemblyName>ActorBackendService.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
     <DebugSymbols>true</DebugSymbols>
