--- a/src/GettingStartedApplication/StatefulBackendService/StatefulBackendService.csproj
+++ b/src/GettingStartedApplication/StatefulBackendService/StatefulBackendService.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net462</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>StatefulBackendService</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.DependencyCollector" Version="2.4.0-beta1-build12047" />
+    <PackageReference Include="Microsoft.ApplicationInsights.ServiceFabric" Version="2.3.0-build1268" />
+    <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.0-preview1-10407-02" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.0.2" />
@@ -33,6 +37,7 @@
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="2.5.216" />
     <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.5.216" />
     <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.5.216" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.4.0-preview1-25214-03" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
