--- a/src/GettingStartedApplication/StatelessBackendService/packages.config
+++ b/src/GettingStartedApplication/StatelessBackendService/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.ApplicationInsights" version="2.4.0-beta1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.0-beta1-build12047" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.ServiceFabric" version="2.3.0-build1270" targetFramework="net462" />
   <package id="Microsoft.ServiceFabric" version="5.5.216" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.Data" version="2.5.216" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="2.5.216" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.Services" version="2.5.216" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.Services.Remoting" version="2.5.216" targetFramework="net452" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0-preview1-25214-03" targetFramework="net462" />
 </packages>
