--- a/src/GettingStartedApplication/WebService/WebService.csproj
+++ b/src/GettingStartedApplication/WebService/WebService.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0-beta4" />
     <PackageReference Include="Microsoft.ApplicationInsights.DependencyCollector" Version="2.4.0-beta3" />
     <PackageReference Include="Microsoft.ApplicationInsights.EventSourceListener" Version="2.4.0-beta2" />
     <PackageReference Include="Microsoft.ApplicationInsights.PerfCounterCollector" Version="2.4.0-beta3" />
